<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:id="@+id/overflowGroup1">
        <item
            android:id="@+id/action_global_deviceFragment"
            android:icon="@drawable/ic_outline_settings_remote_24"
            android:title="@string/overflow_menu_device_configuration"
            android:visible="false"
            app:showAsAction="ifRoom"
            tools:visible="true" />

        <item
            android:id="@+id/fragment_device_new_device"
            android:icon="@drawable/ic_outline_add_24"
            android:title="@string/overflow_menu_new_device"
            android:visible="false"
            app:showAsAction="ifRoom"
            tools:visible="true" />
    </group>

    <group android:id="@+id/overflowGroup2">
        <item
            android:id="@+id/todo_settings"
            android:enabled="false"
            android:icon="@drawable/ic_outline_settings_24"
            android:title="@string/overflow_menu_settings"
            app:showAsAction="never" />
    </group>
</menu>